Finish the backend

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV = developement
 PORT = 8000
 MONGO_URI = mongodb+srv://med1234:med1234@cluster0.elunirs.mongodb.net/mernapp?retryWrites=true&w=majority
+JWT_SECRET = abc123
